<resources>
    <string name="app_name" translatable="false">Prematch</string>
    <string name="app_name_uppercase" translatable="false">PREMATCH</string>
    <string name="app_name_lowercase" translatable="false">prematch</string>
    <string name="company_name" translatable="false">Pro Evolution Programming</string>
    <string name="company_name_year" translatable="false">Pro Evolution Programming 2020</string>
    <string name="application_logo_description">Application Logo</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="click_to_create_account">If you don\'t have an account, Register Now!</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="terms_and_conditions_title">TERMS AND CONDITIONS</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="i_have_read_and_agree_to_the">I have read and agree to the </string>
    <string name="secondary_color">Secondary Color</string>
    <string name="primary_color">Primary Color</string>
    <string name="team_city">Team City</string>
    <string name="team_initials">Team Initials</string>
    <string name="team_name">Team Name</string>
    <string name="if_you_don_t_have_an_account">If you don\'t have an account,</string>
    <string name="register_now">Register Now!</string>
    <string name="recover_password">Recover Password</string>
    <string name="new_password">New Password</string>
    <string name="recover">Recover</string>
</resources>