<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@color/colorDark">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:contentDescription="@string/application_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/app_name_uppercase"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/enterUsernameEditText"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <EditText
        android:id="@+id/enterPasswordEditText"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUsernameEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/button_border"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/normal_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordEditText" />

    <LinearLayout
        android:id="@+id/RegisterLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/if_you_don_t_have_an_account"
            android:textColor="@color/colorLight"
            android:textSize="@dimen/medium_size" />

        <TextView
            android:id="@+id/createAccountClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/register_now"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/medium_size" />

    </LinearLayout>


    <TextView
        android:id="@+id/recoverPasswordClickableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/recover_password"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/medium_size"
        app:layout_constraintBottom_toTopOf="@+id/companyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLinearLayout" />

    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/company_name_year"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/footer_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>