<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity"
    android:background="@color/colorDark">

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/new_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterFirstNameEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/first_name"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTextView" />

    <EditText
        android:id="@+id/enterLastNameEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/last_name"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFirstNameEditText" />

    <EditText
        android:id="@+id/enterUsernameEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLastNameEditText" />

    <EditText
        android:id="@+id/enterEmailEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/e_mail"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUsernameEditText" />

    <EditText
        android:id="@+id/enterPasswordEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailEditText" />

    <!--<EditText
        android:id="@+id/enterRepeatPasswordEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/repeat_password"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordEditText" /> -->

    <LinearLayout
        android:id="@+id/termsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordEditText">

        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorLight"
            android:fontFamily="@font/roboto"
            android:text="@string/i_have_read_and_agree_to_the"
            android:textColor="@color/colorLight"
            android:textColorHint="@color/colorLight"
            android:textSize="@dimen/medium_size" />

        <TextView
            android:id="@+id/termsClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginLeft="3dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/medium_size"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@drawable/button_border"
        android:fontFamily="@font/roboto_black"
        android:text="@string/create_account"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/normal_size"
        app:layout_constraintBottom_toTopOf="@+id/companyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/company_name_year"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/footer_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>