<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RecoverPasswordActivity"
    android:background="@color/colorDark">

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:fontFamily="@font/roboto_black"
        android:text="@string/recover_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterUsernameEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/username"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTextView" />

    <EditText
        android:id="@+id/enterPasswordEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUsernameEditText" />

    <!--<EditText
        android:id="@+id/enterRepeatPasswordEditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/roboto"
        android:hint="@string/repeat_password"
        android:textAlignment="center"
        android:textColor="@color/colorLight"
        android:textColorHint="@color/colorLight"
        android:textSize="@dimen/medium_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordEditText" /> -->

    <Button
        android:id="@+id/recoverPasswordButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/large_margin"
        android:background="@drawable/button_border"
        android:fontFamily="@font/roboto_black"
        android:text="@string/recover"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/normal_size"
        app:layout_constraintBottom_toTopOf="@+id/companyTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="@string/company_name_year"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/footer_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>