<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorDark">

    <LinearLayout
        android:id="@+id/attributesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/tournamentDetailTeamNameRowTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:fontFamily="@font/roboto_black"
            android:text="@string/team_name"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/medium_size"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/small_margin">

            <TextView
                android:id="@+id/tournamentDetailTeamInitialsRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="@string/team_initials"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tournamentDetailTeamCityRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="@string/team_city"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/small_margin">

            <TextView
                android:id="@+id/tournamentDetailTeamPrimaryRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="@string/primary_color"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tournamentDetailTeamSecondaryRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="@string/secondary_color"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tournamentDetailTeamContactEmailRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="E-mail"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tournamentDetailTeamContactPhoneRowTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/footer_size"
                android:text="Phone"
                android:textColor="@color/colorLight"
                android:textAlignment="center"/>

        </LinearLayout>-->

    </LinearLayout>

</LinearLayout>